--- a/static/less/main.less
+++ b/static/less/main.less
@@ -40,12 +40,9 @@ html, body {
   margin: 2em 0;
 }
 
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table;
-}
-
-.clearfix:after {
-  clear: both;
+.our-way {
+  position: absolute;
+  width: 100%;
+  height: 4000px;
+  overflow: hidden;
 }
