new photo were added

--- a/static/less/images.less
+++ b/static/less/images.less
@@ -23,7 +23,7 @@ div[class*="img-"] {
 }
 
 .img-1 {
-  background: url("../images/2.jpg") center top no-repeat;
+  background: url("../images/1.jpg") center top no-repeat;
 }
 
 .img-2 {
@@ -36,4 +36,132 @@ div[class*="img-"] {
 
 .img-4 {
   background: url("../images/4.jpg") center top no-repeat;
+}
+
+.img-5 {
+  background: url("../images/5.jpg") center top no-repeat;
+}
+
+.img-6 {
+  background: url("../images/6.jpg") center top no-repeat;
+}
+
+.img-7 {
+  background: url("../images/7.jpg") center top no-repeat;
+}
+
+.img-8 {
+  background: url("../images/8.jpg") center top no-repeat;
+}
+
+.img-9 {
+  background: url("../images/9.jpg") center top no-repeat;
+}
+
+.img-10 {
+  background: url("../images/10.jpg") center top no-repeat;
+}
+
+.img-11 {
+  background: url("../images/11.jpg") center top no-repeat;
+}
+
+.img-12 {
+  background: url("../images/12.jpg") center top no-repeat;
+}
+
+.img-13 {
+  background: url("../images/13.jpg") center top no-repeat;
+}
+
+.img-14 {
+  background: url("../images/14.jpg") center top no-repeat;
+}
+
+.img-15 {
+  background: url("../images/15.jpg") center top no-repeat;
+}
+
+.img-16 {
+  background: url("../images/16.jpg") center top no-repeat;
+}
+
+.img-17 {
+  background: url("../images/17.jpg") center top no-repeat;
+}
+
+.img-18 {
+  background: url("../images/18.jpg") center top no-repeat;
+}
+
+.img-19 {
+  background: url("../images/19.jpg") center top no-repeat;
+}
+
+.img-20 {
+  background: url("../images/20.jpg") center top no-repeat;
+}
+
+.img-21 {
+  background: url("../images/21.jpg") center top no-repeat;
+}
+
+.img-22 {
+  background: url("../images/22.jpg") center top no-repeat;
+}
+
+.img-23 {
+  background: url("../images/23.jpg") center top no-repeat;
+}
+
+.img-24 {
+  background: url("../images/24.jpg") center top no-repeat;
+}
+
+.img-25 {
+  background: url("../images/25.jpg") center top no-repeat;
+}
+
+.img-26 {
+  background: url("../images/26.jpg") center top no-repeat;
+}
+
+.img-27 {
+  background: url("../images/27.jpg") center top no-repeat;
+}
+
+.img-28 {
+  background: url("../images/28.jpg") center top no-repeat;
+}
+
+.img-29 {
+  background: url("../images/29.jpg") center top no-repeat;
+}
+
+.img-30 {
+  background: url("../images/30.jpg") center top no-repeat;
+}
+
+.img-31 {
+  background: url("../images/31.jpg") center top no-repeat;
+}
+
+.img-32 {
+  background: url("../images/32.jpg") center top no-repeat;
+}
+
+.img-33 {
+  background: url("../images/33.jpg") center top no-repeat;
+}
+
+.img-34 {
+  background: url("../images/34.jpg") center top no-repeat;
+}
+
+.img-35 {
+  background: url("../images/35.jpg") center top no-repeat;
+}
+
+.img-36 {
+  background: url("../images/36.jpg") center top no-repeat;
 }
