--- a/static/less/main.less
+++ b/static/less/main.less
@@ -14,9 +14,9 @@ html, body {
   overflow: hidden;
 
   .column {
-    width: 20%;
+    width: 22.5%;
     height: 100%;
-    margin: 0 2%;
+    margin: 0 1%;
     display: inline-block;
   }
 }
@@ -31,6 +31,7 @@ html, body {
 .do-you-married-me-message {
   text-align: center;
   font-size: 10em;
+  padding: 1em;
 }
 
 .full-screen-message-section {
