--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -1,2 +1,5 @@
-@backgroundMessage: #C03C44;
+@backgroundMessage: #313F7C;
 @colorMessage: white;
+
+@textShadow: 3px 3px 6px rgba(150, 150, 150, 1);
+@imageShadow: 0px 0px 7px 0px rgba(50, 50, 50, 0.75);
