domReady module was added

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -64,7 +64,7 @@ html, body {
 .do-you-married-me-message {
   text-align: center;
   font-size: 10em;
-  padding: 1em;
+  padding: 2.5em 1em;
 }
 
 .full-screen-message-section {
