simple lazy-loading

--- a/static/less/loading.less
+++ b/static/less/loading.less
@@ -10,4 +10,10 @@
   left: 0px;
   z-index: 999;
   background-color: rgb(46, 204, 113);
+  i {
+    left: 45%;
+    position: absolute;
+    top: 43%;
+    font-size: 7em;
+  }
 }
