--- a/static/less/loading.less
+++ b/static/less/loading.less
@@ -3,13 +3,14 @@
 }
 
 .loading {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0px;
   left: 0px;
   z-index: 999;
   background-color: rgb(46, 204, 113);
+  background-image: -webkit-linear-gradient(left, rgb(61, 126, 170), rgb(255, 228, 122));
   i {
     left: 45%;
     position: absolute;
