--- a/static/less/main.less
+++ b/static/less/main.less
@@ -45,7 +45,7 @@ html, body {
 }
 
 .niconne-font {
-  font-family: Niconne, cursive;
+  font-family: 'Lobster', cursive;
 }
 
 .do-you-married-me-message {
