styles for mobile was added

--- a/static/less/styles.css
+++ b/static/less/styles.css
@@ -394,3 +394,22 @@ body {
     min-width: 1300px;
   }
 }
+@media (max-width: 650px) {
+  .photo-wrapper {
+    position: relative;
+    height: 780%;
+  }
+  .photo-wrapper .column {
+    width: 100%;
+    height: 25%;
+    margin: -4px 1%;
+    display: block;
+  }
+  .do-you-married-me-message {
+    font-size: 5em;
+    padding: 4em 0em;
+  }
+  #first-section h1 {
+    font-size: 5em;
+  }
+}
