em were changed to rem

--- a/static/less/heartbeat.less
+++ b/static/less/heartbeat.less
@@ -96,7 +96,7 @@
 }
 
 @heartbeat-color: #e87;
-@heartbeat-size: 1em;
+@heartbeat-size: 10rem;
 // must be divisible by 2 and 3
 @heartbeat-rotation: rotate(45deg);
 
