--- a/static/less/images.less
+++ b/static/less/images.less
@@ -3,20 +3,19 @@
 
 .photo-wrapper {
   position: relative;
-  height: 180%;
+  height: 130rem;
   overflow: hidden;
 
   .column {
     width: 22.5%;
     height: 100%;
-    margin: -4px 1%;
     display: inline-block;
   }
 }
 
 div[class*="block-"] {
   width: 100%;
-  margin: 2em 0;
+  margin: 2rem 0;
   .border-radius();
   .box-shadow(@imageShadow);
 }
@@ -26,15 +25,15 @@ div[class*="img-"] {
 }
 
 .block-1 {
-  height: 25em;
+  height: 25rem;
 }
 
 .block-2 {
-  height: 40em;
+  height: 40rem;
 }
 
 .block-3 {
-  height: 55em;
+  height: 55rem;
 }
 
 .img-1 {
