--- a/static/less/index.less
+++ b/static/less/index.less
@@ -17,20 +17,19 @@
 @media (max-width: 650px){
   .photo-wrapper {
     position: relative;
-    height: 780%;
+    height: 510rem;
     .column{
           width: 100%;
           height: 25%;
-          margin: -4px 1%;
           display: block;
     }
   }
   .do-you-married-me-message {
-     font-size: 5em;
-     padding: 4em 0em;
+     font-size: 5rem;
+     padding: 10rem 0rem;
   }
 
   #first-section h1 {
-    font-size: 5em;
+    font-size: 5rem;
   }
 }
