--- a/static/less/main.less
+++ b/static/less/main.less
@@ -6,7 +6,7 @@ html, body {
 }
 
 .photos-section {
-  padding: 2em 0;
+  padding: 2rem 0;
 }
 
 #first-section {
@@ -20,7 +20,7 @@ html, body {
   );
 
   h1 {
-    font-size: 10em;
+    font-size: 10rem;
   }
 }
 
@@ -50,20 +50,20 @@ html, body {
 
 .do-you-married-me-message {
   text-align: center;
-  font-size: 10em;
-  padding: 2.5em 1em;
+  font-size: 10rem;
+  padding: 41.5rem 1rem;
 }
 
 .full-screen-message-section {
   background-color: @backgroundMessage;
   color: @colorMessage;
-  padding: 2em 0;
+  padding: 2rem 0;
   .text-shadow(@textShadow);
 }
 
 .our-way {
   position: absolute;
   width: 100%;
-  height: 6000px;
+  height: 4000px;
   overflow: hidden;
 }
