--- a/static/less/index.less
+++ b/static/less/index.less
@@ -20,7 +20,7 @@
     height: 510rem;
     .column{
           width: 100%;
-          height: 25%;
+          height: 24.5%;
           display: block;
     }
   }
@@ -31,5 +31,10 @@
 
   #first-section h1 {
     font-size: 5rem;
+  }
+
+  div[class*="block-"] {
+    width: 100%;
+    height: 40rem;
   }
 }
