--- a/static/less/styles.css
+++ b/static/less/styles.css
@@ -4,7 +4,7 @@
   overflow: hidden;
 }
 .photo-wrapper .column {
-  width: 22.5%;
+  width: 24%;
   height: 100%;
   display: inline-block;
 }
@@ -400,7 +400,7 @@ body {
   }
   .photo-wrapper .column {
     width: 100%;
-    height: 25%;
+    height: 24.5%;
     display: block;
   }
   .do-you-married-me-message {
@@ -409,5 +409,9 @@ body {
   }
   #first-section h1 {
     font-size: 5rem;
+  }
+  div[class*="block-"] {
+    width: 100%;
+    height: 40rem;
   }
 }
