--- a/static/less/index.less
+++ b/static/less/index.less
@@ -26,7 +26,7 @@
   }
   .do-you-married-me-message {
      font-size: 5rem;
-     padding: 10rem 0rem;
+     padding: 10rem 0;
   }
 
   #first-section h1 {
